--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
     <script>
         // --- Global Variables and Constants ---
-        const API_KEY = ""; // Leave as is, Canvas provides this
+        const API_KEY = "AIzaSyBgiXj9RSPEUhQyOLju1WazVPV7mqihaKs"; // Leave as is, Canvas provides this
         const GEMINI_TEXT_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent";
         const IMAGEN_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/imagen-4.0-generate-001:predict";
         const TTS_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-tts:generateContent";
